--- a/www/css/style.css
+++ b/www/css/style.css
@@ -8,3 +8,35 @@ button {
 
 #button-div {
   display: flex; }
+
+#setting-btn {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  right: 5px;
+  top: 5px; }
+
+#setting-frame {
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.9);
+  top: 0%;
+  bottom: 0%;
+  left: 0%;
+  right: 0%;
+  z-index: 10;
+  overflow: scroll; }
+  #setting-frame #white-frame {
+    position: absolute;
+    background-color: white;
+    border: 3px solid #000000;
+    top: 15%;
+    bottom: 15%;
+    left: 15%;
+    right: 15%; }
+    #setting-frame #white-frame #setting-close-btn {
+      position: absolute;
+      width: 60px;
+      height: 60px;
+      right: 5px;
+      top: 5px;
+      z-index: 11; }
