--- a/www/css/style.css
+++ b/www/css/style.css
@@ -18,11 +18,13 @@ button {
 
 #setting-frame {
   position: absolute;
+  display: none;
   background-color: rgba(255, 255, 255, 0.9);
-  top: 0%;
-  bottom: 0%;
-  left: 0%;
-  right: 0%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   z-index: 10;
   overflow: scroll; }
   #setting-frame #white-frame {
@@ -40,3 +42,15 @@ button {
       right: 5px;
       top: 5px;
       z-index: 11; }
+    #setting-frame #white-frame #target-div, #setting-frame #white-frame #bodies-div {
+      height: 40%;
+      background-color: gray;
+      margin: 10%; }
+    #setting-frame #white-frame #bodies-div {
+      display: flex; }
+      #setting-frame #white-frame #bodies-div #object_div {
+        flex-grow: 1;
+        flex-basis: 30%; }
+      #setting-frame #white-frame #bodies-div #params_div {
+        flex-grow: 1;
+        flex-basis: 70%; }
