--- a/www/css/style.css
+++ b/www/css/style.css
@@ -42,15 +42,14 @@ button {
       right: 5px;
       top: 5px;
       z-index: 11; }
-    #setting-frame #white-frame #target-div, #setting-frame #white-frame #bodies-div {
+    #setting-frame #white-frame #env-div, #setting-frame #white-frame #bodies-div {
       height: 40%;
       background-color: gray;
-      margin: 10%; }
-    #setting-frame #white-frame #bodies-div {
+      margin: 10%;
       display: flex; }
-      #setting-frame #white-frame #bodies-div #object_div {
-        flex-grow: 1;
-        flex-basis: 30%; }
-      #setting-frame #white-frame #bodies-div #params_div {
-        flex-grow: 1;
-        flex-basis: 70%; }
+    #setting-frame #white-frame #bodies-div #object_div {
+      flex-grow: 1;
+      flex-basis: 30%; }
+    #setting-frame #white-frame #bodies-div #params_div {
+      flex-grow: 1;
+      flex-basis: 70%; }
