--- a/www/css/fukidashi.css
+++ b/www/css/fukidashi.css
@@ -4,7 +4,7 @@
 }
 .fukidashi {
   display: none;
-  width: 200px;
+  width: 400px;
   position: absolute;
   top: 0;
   left: 250px;
@@ -30,4 +30,33 @@
 }
 .text:hover + .fukidashi {
   display: block;
+}
+
+#resize-div {
+  background-color: white;
+  width: 100%;
+}
+
+#preview-div {
+  width: 10px;
+  height: 10px;
+  background-color: red;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+}
+
+.shape-slider {
+  width: 30%;
+  margin-left: 1%;
+  margin-right: 1%;
+}
+#resize-slider-div {
+  width: 100%;
+  position: absolute;
+  bottom: 20px;
+  margin: 0 2.5%;
 }
