--- a/www/css/fukidashi.css
+++ b/www/css/fukidashi.css
@@ -35,6 +35,8 @@
 #resize-div {
   background-color: white;
   width: 100%;
+  height: 200px;
+  position: relative;
 }
 
 #preview-div {
@@ -59,4 +61,16 @@
   position: absolute;
   bottom: 20px;
   margin: 0 2.5%;
+  align-content: center;
+}
+
+#fukidashi-left {
+ flex-grow: 1;
+ flex-basis: 50%;
+}
+
+#fukidashi-right {
+  flex-grow: 1;
+  flex-basis: 100%;
+  display: block;
 }
