--- a/www/css/fukidashi.css
+++ b/www/css/fukidashi.css
@@ -5,6 +5,7 @@
 .fukidashi {
   display: none;
   width: 400px;
+  height: 100%;
   position: absolute;
   top: 0;
   left: 250px;
@@ -73,4 +74,6 @@
   flex-grow: 1;
   flex-basis: 100%;
   display: block;
+  height: 100%;
+  overflow: scroll;
 }
